# rs-lense

./: Cargo.toml  README.md
benches/: lense.rs
examples/: alice.rs
src/: aligned.rs  file.rs  iterator.rs  lib.rs  pool.rs  prim.rs  seekable.rs
tests/: alice.rs  alignment.rs  bob.rs  iter.rs  pool.rs
