[package]
name = "lense"
description = "High performance by-ref, transmute backed reader."
license = "MIT"
version = "0.1.2"
authors = ["James McGlashan <github@darkfox.id.au>"]

repository = "https://github.com/james-darkfox/rs-lense"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false

[features]

strict_alignment = []
automatic_padding = []
